#view.test#:   new file sql_table.cc, handler.h:   Fixed bug #14540.   Added error mnemonic code HA_ADMIN_NOT_BASE_TABLE   to report that an operation cannot be applied for views. view.test, view.result:   Added a test case for bug #14540. errmsg.txt:   Fixed bug #14540.   Added error ER_CHECK_NOT_BASE_TABLE.